--- a/rest-sample/pom.xml
+++ b/rest-sample/pom.xml
@@ -3,8 +3,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>org.springframework</groupId>
-	<artifactId>gs-rest-service</artifactId>
+	<groupId>it.bassimatteo</groupId>
+	<artifactId>rest-sample</artifactId>
 	<version>0.1.0</version>
 
 	<parent>
@@ -33,6 +33,14 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.0</version>
+				<configuration>
+					<path>/rest-sample</path>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
