--- a/rest-sample/pom.xml
+++ b/rest-sample/pom.xml
@@ -6,6 +6,12 @@
 	<groupId>it.bassimatteo</groupId>
 	<artifactId>rest-sample</artifactId>
 	<version>0.1.0</version>
+	<packaging>war</packaging>
+
+	<properties>
+		<java.version>1.7</java.version>
+		<java.home></java.home>
+	</properties>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -24,6 +30,7 @@
 			<scope>provided</scope>
 		</dependency>
 
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -33,13 +40,12 @@
 		<dependency>
 			<groupId>com.jayway.jsonpath</groupId>
 			<artifactId>json-path</artifactId>
-			<version>1.2.0</version>
 		</dependency>
+
+
 	</dependencies>
 
-	<properties>
-		<java.version>1.7</java.version>
-	</properties>
+
 	<build>
 		<plugins>
 			<plugin>
@@ -54,8 +60,54 @@
 					<path>/rest-sample</path>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+				<version>2.17</version>
+				<executions>
+					<execution>
+						<id>checkstyle</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>check</goal>
+						</goals>
+						<configuration>
+							<failOnViolation>true</failOnViolation>
+							<configLocation>google_checks.xml</configLocation>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
+
 	</build>
+
+	<!-- http://maven.apache.org/plugins/maven-checkstyle-plugin/usage.html -->
+	<reporting>
+		<plugins>
+
+			<plugin>
+				<artifactId>maven-project-info-reports-plugin</artifactId>
+				<version>2.8</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+				<version>2.17</version>
+				<configuration>
+					<configLocation>google_checks.xml</configLocation>
+				</configuration>
+				<reportSets>
+					<reportSet>
+						<reports>
+							<report>checkstyle</report>
+						</reports>
+					</reportSet>
+				</reportSets>
+			</plugin>
+		</plugins>
+	</reporting>
 
 	<repositories>
 		<repository>
@@ -69,5 +121,6 @@
 			<url>https://repo.spring.io/libs-release</url>
 		</pluginRepository>
 	</pluginRepositories>
-	<packaging>war</packaging>
+
+
 </project>
