--- a/rest-sample/pom.xml
+++ b/rest-sample/pom.xml
@@ -96,6 +96,7 @@
 				<artifactId>maven-checkstyle-plugin</artifactId>
 				<version>2.17</version>
 				<configuration>
+					<failOnViolation>true</failOnViolation>
 					<configLocation>google_checks.xml</configLocation>
 				</configuration>
 				<reportSets>
